Use java11 variant of JT400

--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
 		<dependency>
 			<groupId>net.sf.jt400</groupId>
 			<artifactId>jt400</artifactId>
+			<classifier>java11</classifier>
 			<version>21.0.0</version>
 		</dependency>
 		<dependency>
