Added onMSGW parameter

--- a/src/main/resources/org/jenkinsci/plugins/ibmisteps/steps/IBMiWaitJobStep/config.properties
+++ b/src/main/resources/org/jenkinsci/plugins/ibmisteps/steps/IBMiWaitJobStep/config.properties
@@ -2,3 +2,5 @@ name=Job name
 number=Job number
 user=Job user
 timeout=Timeout (in seconds)
+onMSGW=On Message Wait
+onMSGW.description=The action to take when the Job being waited on is in MSGW status
