Prepare documentation for new baseDir parameter
Signed-off-by: Seb Julliand <sebjulliand@gmail.com>

--- a/src/main/resources/org/jenkinsci/plugins/ibmisteps/steps/IBMiPutIFSStep/config.properties
+++ b/src/main/resources/org/jenkinsci/plugins/ibmisteps/steps/IBMiPutIFSStep/config.properties
@@ -1,3 +1,5 @@
 From=From file/folder
 To=To IFS folder
 CCSID=CCSID
+BaseDir=Base directory
+BaseDirDescription=When set, the rest of the From path after the Base directory will be kept during the copy
